@@ -1,6 +1,6 @@
 /*
  * cups - Python bindings for CUPS
- * Copyright (C) 2002, 2005, 2006, 2007, 2008, 2009, 2010, 2011  Red Hat, Inc
+ * Copyright (C) 2002, 2005, 2006, 2007, 2008, 2009, 2010, 2011, 2012  Red Hat, Inc
  * Author: Tim Waugh <twaugh@redhat.com>
  *
  * This program is free software; you can redistribute it and/or modify
@@ -36,6 +36,21 @@
 
 static pthread_key_t tls_key = -1;
 static pthread_once_t tls_key_once = PTHREAD_ONCE_INIT;
+
+#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 3)
+# define CUPS_PRINTER_DISCOVERED	0x1000000
+# define CUPS_SERVER_REMOTE_ANY		"_remote_any"
+#endif /* CUPS < 1.3 */
+
+#if CUPS_VERSION_MAJOR < 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR < 5)
+# define HTTP_AUTHORIZATION_CANCELED	1000
+#endif /* CUPS < 1.4 */
+
+#if CUPS_VERSION_MAJOR < 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR < 5)
+# define HTTP_PKI_ERROR			1001
+# define IPP_AUTHENTICATION_CANCELED	0x1000
+# define IPP_PKI_ERROR			0x1001
+#endif /* CUPS < 1.5 */
 
 //////////////////////
 // Worker functions //
@@ -659,9 +674,7 @@ initcups (void)
   INT_CONSTANT (CUPS_PRINTER_AUTHENTICATED);
   INT_CONSTANT (CUPS_PRINTER_COMMANDS);
   INT_CONSTANT (CUPS_PRINTER_OPTIONS);
-#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 3)
   INT_CONSTANT (CUPS_PRINTER_DISCOVERED);
-#endif /* CUPS 1.3 */
 
   // HTTP encryption
   INT_CONSTANT (HTTP_ENCRYPT_IF_REQUESTED);
@@ -685,12 +698,8 @@ initcups (void)
   INT_CONSTANT (HTTP_SERVICE_UNAVAILABLE);
   INT_CONSTANT (HTTP_GATEWAY_TIMEOUT);
   INT_CONSTANT (HTTP_NOT_SUPPORTED);
-#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 4)
   INT_CONSTANT (HTTP_AUTHORIZATION_CANCELED);
-#endif /* CUPS 1.4 */
-#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 5)
   INT_CONSTANT (HTTP_PKI_ERROR);
-#endif /* CUPS 1.5 */
 
   // PPD UI enum
   INT_CONSTANT (PPD_UI_BOOLEAN);
@@ -810,10 +819,8 @@ initcups (void)
   INT_CONSTANT (IPP_ERROR_JOB_CANCELLED);
   INT_CONSTANT (IPP_MULTIPLE_JOBS_NOT_SUPPORTED);
   INT_CONSTANT (IPP_PRINTER_IS_DEACTIVATED);
-#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 5)
   INT_CONSTANT (IPP_AUTHENTICATION_CANCELED);
   INT_CONSTANT (IPP_PKI_ERROR);
-#endif /* CUPS 1.5 */
 
   // IPP states
   INT_CONSTANT (IPP_ERROR);
@@ -853,9 +860,7 @@ initcups (void)
   STR_CONSTANT (CUPS_SERVER_REMOTE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_SHARE_PRINTERS);
   STR_CONSTANT (CUPS_SERVER_USER_CANCEL_ANY);
-#if CUPS_VERSION_MAJOR > 1 || (CUPS_VERSION_MAJOR == 1 && CUPS_VERSION_MINOR >= 3)
   STR_CONSTANT (CUPS_SERVER_REMOTE_ANY);
-#endif /* CUPS 1.3 */
 
   // Exceptions
   obj = PyDict_New ();
