@@ -1,3 +1,8 @@
+2012-03-28  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c: Define all constants regardless of which
+	version of CUPS is built against.
+
 2012-03-22  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsppd.c (PPD_dealloc): Add missing NULL check for
